--- a/public/html/config.html
+++ b/public/html/config.html
@@ -430,6 +430,13 @@
                      id="networkaccess_guest_portalid">
                </div>
             </div>
+            <div class="form-row">
+               <div class="form-group col-md-3">
+                  <label for="networkaccess_ssid">Guest SSID</label>
+                  <input name="networkaccess_ssid" type="text"
+                     class="form-control shadow-sm p-3 mb-1 rounded networkaccess general" id="networkaccess_ssid">
+               </div>
+            </div>
             <div class="form-row" hidden>
                <div class="form-group col-md-3">
                   <label for="networkaccess_ers_username">ERS Username</label>
